@@ -200,162 +200,166 @@ $bookstoreList = array(
  * This array can be modified at runtime with the LanguageGetMagic hook
  */
 $magicWords = array(
-#   ID                                 CASE  SYNONYMS
-	'redirect'               => array( 0,    '#REDIRECT'              ),
-	'notoc'                  => array( 0,    '__NOTOC__'              ),
-	'nogallery'              => array( 0,    '__NOGALLERY__'          ),
-	'forcetoc'               => array( 0,    '__FORCETOC__'           ),
-	'toc'                    => array( 0,    '__TOC__'                ),
-	'noeditsection'          => array( 0,    '__NOEDITSECTION__'      ),
-	'noheader'               => array( 0,    '__NOHEADER__'           ),
-	'currentmonth'           => array( 1,    'CURRENTMONTH', 'CURRENTMONTH2' ),
-	'currentmonth1'          => array( 1,    'CURRENTMONTH1'          ),
-	'currentmonthname'       => array( 1,    'CURRENTMONTHNAME'       ),
-	'currentmonthnamegen'    => array( 1,    'CURRENTMONTHNAMEGEN'    ),
-	'currentmonthabbrev'     => array( 1,    'CURRENTMONTHABBREV'     ),
-	'currentday'             => array( 1,    'CURRENTDAY'             ),
-	'currentday2'            => array( 1,    'CURRENTDAY2'            ),
-	'currentdayname'         => array( 1,    'CURRENTDAYNAME'         ),
-	'currentyear'            => array( 1,    'CURRENTYEAR'            ),
-	'currenttime'            => array( 1,    'CURRENTTIME'            ),
-	'currenthour'            => array( 1,    'CURRENTHOUR'            ),
-	'localmonth'             => array( 1,    'LOCALMONTH', 'LOCALMONTH2' ),
-	'localmonth1'            => array( 1,    'LOCALMONTH1'             ),
-	'localmonthname'         => array( 1,    'LOCALMONTHNAME'         ),
-	'localmonthnamegen'      => array( 1,    'LOCALMONTHNAMEGEN'      ),
-	'localmonthabbrev'       => array( 1,    'LOCALMONTHABBREV'       ),
-	'localday'               => array( 1,    'LOCALDAY'               ),
-	'localday2'              => array( 1,    'LOCALDAY2'              ),
-	'localdayname'           => array( 1,    'LOCALDAYNAME'           ),
-	'localyear'              => array( 1,    'LOCALYEAR'              ),
-	'localtime'              => array( 1,    'LOCALTIME'              ),
-	'localhour'              => array( 1,    'LOCALHOUR'              ),
-	'numberofpages'          => array( 1,    'NUMBEROFPAGES'          ),
-	'numberofarticles'       => array( 1,    'NUMBEROFARTICLES'       ),
-	'numberoffiles'          => array( 1,    'NUMBEROFFILES'          ),
-	'numberofusers'          => array( 1,    'NUMBEROFUSERS'          ),
-	'numberofactiveusers'    => array( 1,    'NUMBEROFACTIVEUSERS'    ),
-	'numberofedits'          => array( 1,    'NUMBEROFEDITS'          ),
-	'numberofviews'          => array( 1,    'NUMBEROFVIEWS'          ),
-	'pagename'               => array( 1,    'PAGENAME'               ),
-	'pagenamee'              => array( 1,    'PAGENAMEE'              ),
-	'namespace'              => array( 1,    'NAMESPACE'              ),
-	'namespacee'             => array( 1,    'NAMESPACEE'             ),
-	'namespacenumber'        => array( 1,    'NAMESPACENUMBER'        ),
-	'talkspace'              => array( 1,    'TALKSPACE'              ),
-	'talkspacee'             => array( 1,    'TALKSPACEE'              ),
-	'subjectspace'           => array( 1,    'SUBJECTSPACE', 'ARTICLESPACE' ),
-	'subjectspacee'          => array( 1,    'SUBJECTSPACEE', 'ARTICLESPACEE' ),
-	'fullpagename'           => array( 1,    'FULLPAGENAME'           ),
-	'fullpagenamee'          => array( 1,    'FULLPAGENAMEE'          ),
-	'subpagename'            => array( 1,    'SUBPAGENAME'            ),
-	'subpagenamee'           => array( 1,    'SUBPAGENAMEE'           ),
-	'basepagename'           => array( 1,    'BASEPAGENAME'           ),
-	'basepagenamee'          => array( 1,    'BASEPAGENAMEE'          ),
-	'talkpagename'           => array( 1,    'TALKPAGENAME'           ),
-	'talkpagenamee'          => array( 1,    'TALKPAGENAMEE'          ),
-	'subjectpagename'        => array( 1,    'SUBJECTPAGENAME', 'ARTICLEPAGENAME' ),
-	'subjectpagenamee'       => array( 1,    'SUBJECTPAGENAMEE', 'ARTICLEPAGENAMEE' ),
-	'msg'                    => array( 0,    'MSG:'                   ),
-	'subst'                  => array( 0,    'SUBST:'                 ),
-	'safesubst'              => array( 0,    'SAFESUBST:'             ),
-	'msgnw'                  => array( 0,    'MSGNW:'                 ),
-	'img_thumbnail'          => array( 1,    'thumbnail', 'thumb'     ),
-	'img_manualthumb'        => array( 1,    'thumbnail=$1', 'thumb=$1' ),
-	'img_right'              => array( 1,    'right'                  ),
-	'img_left'               => array( 1,    'left'                   ),
-	'img_none'               => array( 1,    'none'                   ),
-	'img_width'              => array( 1,    '$1px'                   ),
-	'img_center'             => array( 1,    'center', 'centre'       ),
-	'img_framed'             => array( 1,    'framed', 'enframed', 'frame' ),
-	'img_frameless'          => array( 1,    'frameless'              ),
-	'img_page'               => array( 1,    'page=$1', 'page $1'     ),
-	'img_upright'            => array( 1,    'upright', 'upright=$1', 'upright $1'  ),
-	'img_border'             => array( 1,    'border'                 ),
-	'img_baseline'           => array( 1,    'baseline'               ),
-	'img_sub'                => array( 1,    'sub'                    ),
-	'img_super'              => array( 1,    'super', 'sup'           ),
-	'img_top'                => array( 1,    'top'                    ),
-	'img_text_top'           => array( 1,    'text-top'               ),
-	'img_middle'             => array( 1,    'middle'                 ),
-	'img_bottom'             => array( 1,    'bottom'                 ),
-	'img_text_bottom'        => array( 1,    'text-bottom'            ),
-	'img_link'               => array( 1,    'link=$1'                ),
-	'img_alt'                => array( 1,    'alt=$1'                 ),
-	'int'                    => array( 0,    'INT:'                   ),
-	'sitename'               => array( 1,    'SITENAME'               ),
-	'ns'                     => array( 0,    'NS:'                    ),
-	'nse'                    => array( 0,    'NSE:'                   ),
-	'localurl'               => array( 0,    'LOCALURL:'              ),
-	'localurle'              => array( 0,    'LOCALURLE:'             ),
-	'articlepath'            => array( 0,    'ARTICLEPATH'            ),
-	'pageid'                 => array( 0,    'PAGEID'                 ),
-	'server'                 => array( 0,    'SERVER'                 ),
-	'servername'             => array( 0,    'SERVERNAME'             ),
-	'scriptpath'             => array( 0,    'SCRIPTPATH'             ),
-	'stylepath'              => array( 0,    'STYLEPATH'              ),
-	'grammar'                => array( 0,    'GRAMMAR:'               ),
-	'gender'                 => array( 0,    'GENDER:'                ),
-	'notitleconvert'         => array( 0,    '__NOTITLECONVERT__', '__NOTC__' ),
-	'nocontentconvert'       => array( 0,    '__NOCONTENTCONVERT__', '__NOCC__' ),
-	'currentweek'            => array( 1,    'CURRENTWEEK'            ),
-	'currentdow'             => array( 1,    'CURRENTDOW'             ),
-	'localweek'              => array( 1,    'LOCALWEEK'              ),
-	'localdow'               => array( 1,    'LOCALDOW'               ),
-	'revisionid'             => array( 1,    'REVISIONID'             ),
-	'revisionday'            => array( 1,    'REVISIONDAY'            ),
-	'revisionday2'           => array( 1,    'REVISIONDAY2'           ),
-	'revisionmonth'          => array( 1,    'REVISIONMONTH'          ),
-	'revisionmonth1'         => array( 1,    'REVISIONMONTH1'         ),
-	'revisionyear'           => array( 1,    'REVISIONYEAR'           ),
-	'revisiontimestamp'      => array( 1,    'REVISIONTIMESTAMP'      ),
-	'revisionuser'           => array( 1,    'REVISIONUSER'           ),
-	'plural'                 => array( 0,    'PLURAL:'                ),
-	'fullurl'                => array( 0,    'FULLURL:'               ),
-	'fullurle'               => array( 0,    'FULLURLE:'              ),
-	'canonicalurl'           => array( 0,    'CANONICALURL:'          ),
-	'canonicalurle'          => array( 0,    'CANONICALURLE:'         ),
-	'lcfirst'                => array( 0,    'LCFIRST:'               ),
-	'ucfirst'                => array( 0,    'UCFIRST:'               ),
-	'lc'                     => array( 0,    'LC:'                    ),
-	'uc'                     => array( 0,    'UC:'                    ),
-	'raw'                    => array( 0,    'RAW:'                   ),
-	'displaytitle'           => array( 1,    'DISPLAYTITLE'           ),
-	'rawsuffix'              => array( 1,    'R'                      ),
-	'newsectionlink'         => array( 1,    '__NEWSECTIONLINK__'     ),
-	'nonewsectionlink'       => array( 1,    '__NONEWSECTIONLINK__'   ),
-	'currentversion'         => array( 1,    'CURRENTVERSION'         ),
-	'urlencode'              => array( 0,    'URLENCODE:'             ),
-	'anchorencode'           => array( 0,    'ANCHORENCODE'           ),
-	'currenttimestamp'       => array( 1,    'CURRENTTIMESTAMP'       ),
-	'localtimestamp'         => array( 1,    'LOCALTIMESTAMP'         ),
-	'directionmark'          => array( 1,    'DIRECTIONMARK', 'DIRMARK' ),
-	'language'               => array( 0,    '#LANGUAGE:'             ),
-	'contentlanguage'        => array( 1,    'CONTENTLANGUAGE', 'CONTENTLANG' ),
-	'pagesinnamespace'       => array( 1,    'PAGESINNAMESPACE:', 'PAGESINNS:' ),
-	'numberofadmins'         => array( 1,    'NUMBEROFADMINS'         ),
-	'formatnum'              => array( 0,    'FORMATNUM'              ),
-	'padleft'                => array( 0,    'PADLEFT'                ),
-	'padright'               => array( 0,    'PADRIGHT'               ),
-	'special'                => array( 0,    'special',               ),
-	'speciale'               => array( 0,    'speciale',              ),
-	'defaultsort'            => array( 1,    'DEFAULTSORT:', 'DEFAULTSORTKEY:', 'DEFAULTCATEGORYSORT:' ),
-	'filepath'               => array( 0,    'FILEPATH:'              ),
-	'tag'                    => array( 0,    'tag'                    ),
-	'hiddencat'              => array( 1,    '__HIDDENCAT__'          ),
-	'pagesincategory'        => array( 1,    'PAGESINCATEGORY', 'PAGESINCAT' ),
-	'pagesize'               => array( 1,    'PAGESIZE'               ),
-	'index'                  => array( 1,    '__INDEX__'              ),
-	'noindex'                => array( 1,    '__NOINDEX__'            ),
-	'numberingroup'          => array( 1,    'NUMBERINGROUP', 'NUMINGROUP' ),
-	'staticredirect'         => array( 1,    '__STATICREDIRECT__'     ),
-	'protectionlevel'        => array( 1,    'PROTECTIONLEVEL'        ),
-	'formatdate'             => array( 0,    'formatdate', 'dateformat' ),
-	'url_path'               => array( 0,    'PATH' ),
-	'url_wiki'               => array( 0,    'WIKI' ),
-	'url_query'              => array( 0,    'QUERY' ),
-	'defaultsort_noerror'    => array( 0,    'noerror' ),
-	'defaultsort_noreplace'  => array( 0,    'noreplace' ),
+#   ID                                  CASE  SYNONYMS
+	'redirect'                => array( 0,    '#REDIRECT'              ),
+	'notoc'                   => array( 0,    '__NOTOC__'              ),
+	'nogallery'               => array( 0,    '__NOGALLERY__'          ),
+	'forcetoc'                => array( 0,    '__FORCETOC__'           ),
+	'toc'                     => array( 0,    '__TOC__'                ),
+	'noeditsection'           => array( 0,    '__NOEDITSECTION__'      ),
+	'noheader'                => array( 0,    '__NOHEADER__'           ),
+	'currentmonth'            => array( 1,    'CURRENTMONTH', 'CURRENTMONTH2' ),
+	'currentmonth1'           => array( 1,    'CURRENTMONTH1'          ),
+	'currentmonthname'        => array( 1,    'CURRENTMONTHNAME'       ),
+	'currentmonthnamegen'     => array( 1,    'CURRENTMONTHNAMEGEN'    ),
+	'currentmonthabbrev'      => array( 1,    'CURRENTMONTHABBREV'     ),
+	'currentday'              => array( 1,    'CURRENTDAY'             ),
+	'currentday2'             => array( 1,    'CURRENTDAY2'            ),
+	'currentdayname'          => array( 1,    'CURRENTDAYNAME'         ),
+	'currentyear'             => array( 1,    'CURRENTYEAR'            ),
+	'currenttime'             => array( 1,    'CURRENTTIME'            ),
+	'currenthour'             => array( 1,    'CURRENTHOUR'            ),
+	'localmonth'              => array( 1,    'LOCALMONTH', 'LOCALMONTH2' ),
+	'localmonth1'             => array( 1,    'LOCALMONTH1'            ),
+	'localmonthname'          => array( 1,    'LOCALMONTHNAME'         ),
+	'localmonthnamegen'       => array( 1,    'LOCALMONTHNAMEGEN'      ),
+	'localmonthabbrev'        => array( 1,    'LOCALMONTHABBREV'       ),
+	'localday'                => array( 1,    'LOCALDAY'               ),
+	'localday2'               => array( 1,    'LOCALDAY2'              ),
+	'localdayname'            => array( 1,    'LOCALDAYNAME'           ),
+	'localyear'               => array( 1,    'LOCALYEAR'              ),
+	'localtime'               => array( 1,    'LOCALTIME'              ),
+	'localhour'               => array( 1,    'LOCALHOUR'              ),
+	'numberofpages'           => array( 1,    'NUMBEROFPAGES'          ),
+	'numberofarticles'        => array( 1,    'NUMBEROFARTICLES'       ),
+	'numberoffiles'           => array( 1,    'NUMBEROFFILES'          ),
+	'numberofusers'           => array( 1,    'NUMBEROFUSERS'          ),
+	'numberofactiveusers'     => array( 1,    'NUMBEROFACTIVEUSERS'    ),
+	'numberofedits'           => array( 1,    'NUMBEROFEDITS'          ),
+	'numberofviews'           => array( 1,    'NUMBEROFVIEWS'          ),
+	'pagename'                => array( 1,    'PAGENAME'               ),
+	'pagenamee'               => array( 1,    'PAGENAMEE'              ),
+	'namespace'               => array( 1,    'NAMESPACE'              ),
+	'namespacee'              => array( 1,    'NAMESPACEE'             ),
+	'namespacenumber'         => array( 1,    'NAMESPACENUMBER'        ),
+	'talkspace'               => array( 1,    'TALKSPACE'              ),
+	'talkspacee'              => array( 1,    'TALKSPACEE'             ),
+	'subjectspace'            => array( 1,    'SUBJECTSPACE', 'ARTICLESPACE' ),
+	'subjectspacee'           => array( 1,    'SUBJECTSPACEE', 'ARTICLESPACEE' ),
+	'fullpagename'            => array( 1,    'FULLPAGENAME'           ),
+	'fullpagenamee'           => array( 1,    'FULLPAGENAMEE'          ),
+	'subpagename'             => array( 1,    'SUBPAGENAME'            ),
+	'subpagenamee'            => array( 1,    'SUBPAGENAMEE'           ),
+	'basepagename'            => array( 1,    'BASEPAGENAME'           ),
+	'basepagenamee'           => array( 1,    'BASEPAGENAMEE'          ),
+	'talkpagename'            => array( 1,    'TALKPAGENAME'           ),
+	'talkpagenamee'           => array( 1,    'TALKPAGENAMEE'          ),
+	'subjectpagename'         => array( 1,    'SUBJECTPAGENAME', 'ARTICLEPAGENAME' ),
+	'subjectpagenamee'        => array( 1,    'SUBJECTPAGENAMEE', 'ARTICLEPAGENAMEE' ),
+	'msg'                     => array( 0,    'MSG:'                   ),
+	'subst'                   => array( 0,    'SUBST:'                 ),
+	'safesubst'               => array( 0,    'SAFESUBST:'             ),
+	'msgnw'                   => array( 0,    'MSGNW:'                 ),
+	'img_thumbnail'           => array( 1,    'thumbnail', 'thumb'     ),
+	'img_manualthumb'         => array( 1,    'thumbnail=$1', 'thumb=$1' ),
+	'img_right'               => array( 1,    'right'                  ),
+	'img_left'                => array( 1,    'left'                   ),
+	'img_none'                => array( 1,    'none'                   ),
+	'img_width'               => array( 1,    '$1px'                   ),
+	'img_center'              => array( 1,    'center', 'centre'       ),
+	'img_framed'              => array( 1,    'framed', 'enframed', 'frame' ),
+	'img_frameless'           => array( 1,    'frameless'              ),
+	'img_page'                => array( 1,    'page=$1', 'page $1'     ),
+	'img_upright'             => array( 1,    'upright', 'upright=$1', 'upright $1' ),
+	'img_border'              => array( 1,    'border'                 ),
+	'img_baseline'            => array( 1,    'baseline'               ),
+	'img_sub'                 => array( 1,    'sub'                    ),
+	'img_super'               => array( 1,    'super', 'sup'           ),
+	'img_top'                 => array( 1,    'top'                    ),
+	'img_text_top'            => array( 1,    'text-top'               ),
+	'img_middle'              => array( 1,    'middle'                 ),
+	'img_bottom'              => array( 1,    'bottom'                 ),
+	'img_text_bottom'         => array( 1,    'text-bottom'            ),
+	'img_link'                => array( 1,    'link=$1'                ),
+	'img_alt'                 => array( 1,    'alt=$1'                 ),
+	'int'                     => array( 0,    'INT:'                   ),
+	'sitename'                => array( 1,    'SITENAME'               ),
+	'ns'                      => array( 0,    'NS:'                    ),
+	'nse'                     => array( 0,    'NSE:'                   ),
+	'localurl'                => array( 0,    'LOCALURL:'              ),
+	'localurle'               => array( 0,    'LOCALURLE:'             ),
+	'articlepath'             => array( 0,    'ARTICLEPATH'            ),
+	'pageid'                  => array( 0,    'PAGEID'                 ),
+	'server'                  => array( 0,    'SERVER'                 ),
+	'servername'              => array( 0,    'SERVERNAME'             ),
+	'scriptpath'              => array( 0,    'SCRIPTPATH'             ),
+	'stylepath'               => array( 0,    'STYLEPATH'              ),
+	'grammar'                 => array( 0,    'GRAMMAR:'               ),
+	'gender'                  => array( 0,    'GENDER:'                ),
+	'notitleconvert'          => array( 0,    '__NOTITLECONVERT__', '__NOTC__' ),
+	'nocontentconvert'        => array( 0,    '__NOCONTENTCONVERT__', '__NOCC__' ),
+	'currentweek'             => array( 1,    'CURRENTWEEK'            ),
+	'currentdow'              => array( 1,    'CURRENTDOW'             ),
+	'localweek'               => array( 1,    'LOCALWEEK'              ),
+	'localdow'                => array( 1,    'LOCALDOW'               ),
+	'revisionid'              => array( 1,    'REVISIONID'             ),
+	'revisionday'             => array( 1,    'REVISIONDAY'            ),
+	'revisionday2'            => array( 1,    'REVISIONDAY2'           ),
+	'revisionmonth'           => array( 1,    'REVISIONMONTH'          ),
+	'revisionmonth1'          => array( 1,    'REVISIONMONTH1'         ),
+	'revisionyear'            => array( 1,    'REVISIONYEAR'           ),
+	'revisiontimestamp'       => array( 1,    'REVISIONTIMESTAMP'      ),
+	'revisionuser'            => array( 1,    'REVISIONUSER'           ),
+	'plural'                  => array( 0,    'PLURAL:'                ),
+	'fullurl'                 => array( 0,    'FULLURL:'               ),
+	'fullurle'                => array( 0,    'FULLURLE:'              ),
+	'canonicalurl'            => array( 0,    'CANONICALURL:'          ),
+	'canonicalurle'           => array( 0,    'CANONICALURLE:'         ),
+	'lcfirst'                 => array( 0,    'LCFIRST:'               ),
+	'ucfirst'                 => array( 0,    'UCFIRST:'               ),
+	'lc'                      => array( 0,    'LC:'                    ),
+	'uc'                      => array( 0,    'UC:'                    ),
+	'raw'                     => array( 0,    'RAW:'                   ),
+	'displaytitle'            => array( 1,    'DISPLAYTITLE'           ),
+	'rawsuffix'               => array( 1,    'R'                      ),
+	'newsectionlink'          => array( 1,    '__NEWSECTIONLINK__'     ),
+	'nonewsectionlink'        => array( 1,    '__NONEWSECTIONLINK__'   ),
+	'currentversion'          => array( 1,    'CURRENTVERSION'         ),
+	'urlencode'               => array( 0,    'URLENCODE:'             ),
+	'anchorencode'            => array( 0,    'ANCHORENCODE'           ),
+	'currenttimestamp'        => array( 1,    'CURRENTTIMESTAMP'       ),
+	'localtimestamp'          => array( 1,    'LOCALTIMESTAMP'         ),
+	'directionmark'           => array( 1,    'DIRECTIONMARK', 'DIRMARK' ),
+	'language'                => array( 0,    '#LANGUAGE:'             ),
+	'contentlanguage'         => array( 1,    'CONTENTLANGUAGE', 'CONTENTLANG' ),
+	'pagesinnamespace'        => array( 1,    'PAGESINNAMESPACE:', 'PAGESINNS:' ),
+	'numberofadmins'          => array( 1,    'NUMBEROFADMINS'         ),
+	'formatnum'               => array( 0,    'FORMATNUM'              ),
+	'padleft'                 => array( 0,    'PADLEFT'                ),
+	'padright'                => array( 0,    'PADRIGHT'               ),
+	'special'                 => array( 0,    'special',               ),
+	'speciale'                => array( 0,    'speciale',              ),
+	'defaultsort'             => array( 1,    'DEFAULTSORT:', 'DEFAULTSORTKEY:', 'DEFAULTCATEGORYSORT:' ),
+	'filepath'                => array( 0,    'FILEPATH:'              ),
+	'tag'                     => array( 0,    'tag'                    ),
+	'hiddencat'               => array( 1,    '__HIDDENCAT__'          ),
+	'pagesincategory'         => array( 1,    'PAGESINCATEGORY', 'PAGESINCAT' ),
+	'pagesize'                => array( 1,    'PAGESIZE'               ),
+	'index'                   => array( 1,    '__INDEX__'              ),
+	'noindex'                 => array( 1,    '__NOINDEX__'            ),
+	'numberingroup'           => array( 1,    'NUMBERINGROUP', 'NUMINGROUP' ),
+	'staticredirect'          => array( 1,    '__STATICREDIRECT__'     ),
+	'protectionlevel'         => array( 1,    'PROTECTIONLEVEL'        ),
+	'formatdate'              => array( 0,    'formatdate', 'dateformat' ),
+	'url_path'                => array( 0,    'PATH' ),
+	'url_wiki'                => array( 0,    'WIKI' ),
+	'url_query'               => array( 0,    'QUERY' ),
+	'defaultsort_noerror'     => array( 0,    'noerror' ),
+	'defaultsort_noreplace'   => array( 0,    'noreplace' ),
+	'pagesincategory_all'     => array( 0,    'all' ),
+	'pagesincategory_pages'   => array( 0,    'pages' ),
+	'pagesincategory_subcats' => array( 0,    'subcats' ),
+	'pagesincategory_files'   => array( 0,    'files' ),
 );
 
 /**
